@@ -284,4 +284,5 @@ realclean: clean
 	-$(RM) $(GCED_INLINED_STAMP)
 	-$(RM) $(GCD_STATIC_STAMP)
 	-$(RM) $(GCD_SMALL_STATIC_STAMP)
+	cd tests && $(MAKE) clean
 	
